--- a/server/index.html
+++ b/server/index.html
@@ -11,7 +11,7 @@
 
         <script src="/socket.io/socket.io.js"></script>
         <script>
-            var socket = io.connect('https://remote-nao.herokuapp.com');
+            var socket = io.connect('https://domartelle.herokuapp.com');
 
             function instr1() {
                 socket.emit('instruction_to_rpi', 'buy groceries');
