--- a/client-desktop/index.html
+++ b/client-desktop/index.html
@@ -12,10 +12,105 @@
     <script src="lib/bootstrap/js/bootstrap.min.js"></script>
   </head>
   <body>
-    <div>
+    <h1>LECO sensors</h1>
+    <div class="well" style="float: left">
+      <h3>Temperature</h3>
       <canvas id="myChart"></canvas>
       <script>
         var myContext = document.getElementById("myChart");
+        var myChartConfig = {
+          type: "bar",
+          data: {
+            labels: ["Féminin", "Masculin", "Animaux"],
+            datasets: [
+              {
+                label: "Tous les voyageurs",
+                data: [227, 331, 11],
+                backgroundColor: ["green", "green", "green"]
+              },
+              {
+                label: "1ère Classe",
+                data: [107, 115, 2],
+                backgroundColor: ["red", "red", "red"]
+              },
+              {
+                label: "2ème Classe",
+                data: [120, 116, 9],
+                backgroundColor: ["blue", "blue", "blue"]
+              }
+            ]
+          }
+        };
+        var myChart = new Chart(myContext, myChartConfig);
+      </script>
+    </div>
+    <div class="well" style="float: right">
+      <h3>Humidity</h3>
+      <canvas id="myChart2"></canvas>
+      <script>
+        var myContext = document.getElementById("myChart2");
+        var myChartConfig = {
+          type: "bar",
+          data: {
+            labels: ["Féminin", "Masculin", "Animaux"],
+            datasets: [
+              {
+                label: "Tous les voyageurs",
+                data: [227, 331, 11],
+                backgroundColor: ["green", "green", "green"]
+              },
+              {
+                label: "1ère Classe",
+                data: [107, 115, 2],
+                backgroundColor: ["red", "red", "red"]
+              },
+              {
+                label: "2ème Classe",
+                data: [120, 116, 9],
+                backgroundColor: ["blue", "blue", "blue"]
+              }
+            ]
+          }
+        };
+        var myChart = new Chart(myContext, myChartConfig);
+      </script>
+    </div>
+    <div class="well" style="float: left">
+      <h3>Luminosity</h3>
+      <canvas id="myChart4"></canvas>
+      <script>
+        var myContext = document.getElementById("myChart4");
+        var myChartConfig = {
+          type: "bar",
+          data: {
+            labels: ["Féminin", "Masculin", "Animaux"],
+            datasets: [
+              {
+                label: "Tous les voyageurs",
+                data: [227, 331, 11],
+                backgroundColor: ["green", "green", "green"]
+              },
+              {
+                label: "1ère Classe",
+                data: [107, 115, 2],
+                backgroundColor: ["red", "red", "red"]
+              },
+              {
+                label: "2ème Classe",
+                data: [120, 116, 9],
+                backgroundColor: ["blue", "blue", "blue"]
+              }
+            ]
+          }
+        };
+        var myChart = new Chart(myContext, myChartConfig);
+      </script>
+    </div>
+    <div class="well" style="float: right">
+      <h3>Motion</h3>
+      <canvas id="myChart3"></canvas>
+      <script>
+        var myContext = document.getElementById("myChart3");
         var myChartConfig = {
           type: "bar",
           data: {
