--- a/client-desktop/index.html
+++ b/client-desktop/index.html
@@ -31,7 +31,6 @@
           class="form-control"
           style="width:115pt; height:15pt"
           id="beginDateTemp"
-          onchange="submitInput('beginDateTemp','temperature')"
         />
         <label class="control-label col-sm-1" style="margin:0px">
           to
@@ -41,7 +40,7 @@
           class="form-control"
           style="width:115pt; height:15pt"
           id="endDateTemp"
-          onchange="submitInput('endDateTemp','temperature')"
+          onchange="submitInput('DateTemp','temperature')"
         />
       </div>
       <canvas id="temperature"></canvas>
@@ -65,7 +64,6 @@
           class="form-control"
           style="width:115pt; height:15pt"
           id="beginDateHum"
-          onchange="submitInput('beginDateHum','humidity')"
         />
         <label class="control-label col-sm-1" style="margin:0px">
           to
@@ -75,7 +73,7 @@
           class="form-control"
           style="width:115pt; height:15pt"
           id="endDateHum"
-          onchange="submitInput('endDateHum','humidity')"
+          onchange="submitInput('DateHum','humidity')"
         />
       </div>
       <canvas id="humidity"></canvas>
@@ -98,7 +96,6 @@
           class="form-control"
           style="width:115pt; height:15pt"
           id="beginDateLum"
-          onchange="submitInput('beginDateLum','luminosity')"
         />
         <label class="control-label col-sm-1" style="margin:0px">
           to
@@ -108,7 +105,7 @@
           class="form-control"
           style="width:115pt; height:15pt"
           id="endDateLum"
-          onchange="submitInput('endDateLum','luminosity')"
+          onchange="submitInput('DateLum','luminosity')"
         />
       </div>
       <canvas id="luminosity"></canvas>
@@ -131,7 +128,6 @@
           class="form-control"
           style="width:115pt; height:15pt"
           id="beginDateMo"
-          onchange="submitInput('beginDateMo','motion')"
         />
         <label class="control-label col-sm-1" style="margin:0px">
           to
@@ -141,7 +137,7 @@
           class="form-control"
           style="width:115pt; height:15pt"
           id="endDateMo"
-          onchange="submitInput('endDateMo','motion')"
+          onchange="submitInput('DateMo','motion')"
         />
       </div>
       <canvas id="motion"></canvas>
