--- a/client-desktop/index.html
+++ b/client-desktop/index.html
@@ -31,6 +31,7 @@
           class="form-control"
           style="width:115pt; height:15pt"
           id="beginDateTemp"
+          onchange="submitInput('DateTemp','temperature')"
         />
         <label class="control-label col-sm-1" style="margin:0px">
           to
@@ -64,6 +65,7 @@
           class="form-control"
           style="width:115pt; height:15pt"
           id="beginDateHum"
+          onchange="submitInput('DateHum','humidity')"
         />
         <label class="control-label col-sm-1" style="margin:0px">
           to
@@ -96,6 +98,7 @@
           class="form-control"
           style="width:115pt; height:15pt"
           id="beginDateLum"
+          onchange="submitInput('DateLum','luminosity')"
         />
         <label class="control-label col-sm-1" style="margin:0px">
           to
@@ -128,6 +131,7 @@
           class="form-control"
           style="width:115pt; height:15pt"
           id="beginDateMo"
+          onchange="submitInput('DateMo','motion')"
         />
         <label class="control-label col-sm-1" style="margin:0px">
           to
@@ -160,6 +164,7 @@
           class="form-control"
           style="width:115pt; height:15pt"
           id="beginDateLed"
+          onchange="submitInput('DateLed','led')"
         />
         <label class="control-label col-sm-1" style="margin:0px">
           to
@@ -192,6 +197,7 @@
           class="form-control"
           style="width:115pt; height:15pt"
           id="beginDateServo"
+          onchange="submitInput('DateServo','servo')"
         />
         <label class="control-label col-sm-1" style="margin:0px">
           to
